nfl-wallet/overlays/test-east/nfl-wallet-espn-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nfl-wallet-espn
  namespace: nfl-wallet-test
spec:
  host: nfl-wallet-test-espn.apps.cluster-thmg4.thmg4.sandbox4076.opentlc.com
  to:
    kind: Service
    name: nfl-wallet-gateway-istio
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
---
apiVersion: v1
kind: Service
metadata:
  name: espn-api-backend
spec:
  type: ExternalName
  externalName: site.api.espn.com
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: espn-api-external
spec:
  hosts:
    - site.api.espn.com
  ports:
    - number: 443
      name: https
      protocol: HTTPS
  location: MESH_EXTERNAL
  resolution: DNS
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: espn-api-tls
spec:
  host: site.api.espn.com
  trafficPolicy:
    tls:
      mode: SIMPLE
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nfl-wallet-espn-route
spec:
  parentRefs:
    - name: nfl-wallet-gateway
  hostnames:
    - "nfl-wallet-test-espn.apps.cluster-thmg4.thmg4.sandbox4076.opentlc.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /auth/nfl
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: Host
                value: site.api.espn.com
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /apis/site/v2/sports/football/nfl/scoreboard
      backendRefs:
        - name: espn-api-backend
          port: 443
    - matches:
        - path:
            type: PathPrefix
            value: /public/nfl
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: Host
                value: site.api.espn.com
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /apis/site/v2/sports/football/nfl/scoreboard
      backendRefs:
        - name: espn-api-backend
          port: 443
